tests/baselines/reference/jsDeclarationsParameterTagReusesInputNodeInEmit1.errors.txt
tests/cases/conformance/jsdoc/declarations/file.js(1,5): error TS4081: Exported type alias 'BaseFactory' has or is using private name 'Base'.


==== tests/cases/conformance/jsdoc/declarations/base.js (0 errors) ====
    class Base {
        constructor() {}
    }
    
    const BaseFactory = () => {
        return new Base();
    };
    
    BaseFactory.Base = Base;
    
    module.exports = BaseFactory;
    
==== tests/cases/conformance/jsdoc/declarations/file.js (1 errors) ====
    /** @typedef {import('./base')} BaseFactory */
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS4081: Exported type alias 'BaseFactory' has or is using private name 'Base'.
    
    /**
     *
     * @param {InstanceType<BaseFactory["Base"]>} base
     * @returns {InstanceType<BaseFactory["Base"]>}
     */
    const test = (base) => {
        return base;
    };
    